--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -178,7 +178,7 @@
                         <div class="u-container-layout u-container-layout-1">
                             <img src="~/images/9d78815b65758b736576b28f8b3bc8232b8896e2393971e13d531c84f78e21bb8f54ee050ee3ac7f33cd83277668dd3658cf6ab5cbea2e028c91f0_1280.jpg" alt="" class="u-image u-image-default u-image-1" data-image-width="1280" data-image-height="853">
                             <img src="~/images/f59212d5cf53ad5176cb05b53a3476548b27fb0d5ae6676e3fd131724f071e7fa4f7d87665d652e57e86795d3cfdf87db090cd69ded8fc1a157f96_1280.jpg" alt="" class="u-image u-image-default u-image-2" data-image-width="1280" data-image-height="854">
-                            <img src="~/images/d11da39ad327739b263b47e25bd048a9bccc3af82a4fcf00374567c1198996ebdc6c74268c4195e5f0dfd09c80c23bcccefed8fa4284d530351ef4_1280.jpg" alt="" class="u-image u-image-default u-image-3" data-image-width="1280" data-image-height="853">
+                            <img src="~/images/rhfg.jpg" alt="" class="u-image u-image-default u-image-3" data-image-width="1280" data-image-height="853">
                             <h6 class="u-text u-text-default u-text-1">Веб программирование</h6>
                             <h6 class="u-align-center u-text u-text-default u-text-2">
                                 Программирование&nbsp;<br>микроконтроллеров
