--- a/AZSChool/AZSchool.WEB/Views/Home/Student_Done.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student_Done.cshtml
@@ -121,15 +121,15 @@
                 <!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
                     <div class="u-container-layout u-similar-container u-container-layout-1">
-                        <a class="u-post-header-link" href="blog/пост.html">
+                        <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
                             <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/images/1.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Заголовок 1-го поста<!--/blog_post_header_content--></a>
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Заголовок 1-го поста<!--/blog_post_header_content--></a>
                         </h4><!--/blog_post_header--><!--blog_post_content-->
                         <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Пример короткого текста. Lorem ipsum dolor sit amet.<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="blog/пост.html" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Читать далее<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
                     </div>
                 </div><!--/blog_post--><!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-2">
