--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher_InProgress.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher_InProgress.cshtml
@@ -110,32 +110,32 @@
                 <!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
                     <div class="u-container-layout u-similar-container u-container-layout-1">
-                        <a class="u-post-header-link" href="blog/пост.html">
+                        <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
                             <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/images/1.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
                         </h4><!--/blog_post_header--><!--blog_post_content-->
                         <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Описание задания<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="blog/пост.html" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
                     </div>
                 </div><!--/blog_post--><!--blog_post-->
                 <div class="u-align-left u-blog-post u-container-style u-repeater-item u-white u-repeater-item-2">
                     <div class="u-container-layout u-similar-container u-container-layout-1">
-                        <a class="u-post-header-link" href="blog/пост.html">
+                        <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
                             <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/images/1.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
-                            <a class="u-post-header-link" href="blog/пост.html"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Название курса<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Студент: Коля Вася<!--/blog_post_header_content--></a><br />
+                            <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Поток: 3<!--/blog_post_header_content--></a><br />
                         </h4><!--/blog_post_header--><!--blog_post_content-->
                         <div class="u-blog-control u-post-content u-text u-text-2"><!--blog_post_content_content-->Описание задания<!--/blog_post_content_content--></div><!--/blog_post_content--><!--blog_post_readmore-->
-                        <a href="blog/пост.html" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
+                        <a href="#" class="u-blog-control u-btn u-button-style u-btn-1"><!--blog_post_readmore_content-->Перейти<!--/blog_post_readmore_content--></a><!--/blog_post_readmore-->
                     </div>
                 </div><!--/blog_post-->
             </div><!--/blog-->
