--- a/AZSChool/AZSchool.WEB/Views/Home/Student.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student.cshtml
@@ -33,7 +33,7 @@
 <body class="u-body">
     <header class="u-clearfix u-header u-sticky u-white u-header" id="sec-e20f">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <img src="~/images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
+            <img src="~/Images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
 
             <nav class="u-align-left u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
@@ -134,7 +134,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-1">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-1">
                                             <h3 class="u-gallery-heading"></h3>
@@ -143,7 +143,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-2">
                                             <h3 class="u-gallery-heading"></h3>
@@ -152,7 +152,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-3">
                                             <h3 class="u-gallery-heading"></h3>
@@ -187,7 +187,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-2">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-4">
                                             <h3 class="u-gallery-heading"></h3>
@@ -196,7 +196,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-5">
                                             <h3 class="u-gallery-heading"></h3>
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-6">
                                             <h3 class="u-gallery-heading"></h3>
@@ -271,7 +271,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-1">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-1">
                                             <h3 class="u-gallery-heading"></h3>
@@ -280,7 +280,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-2">
                                             <h3 class="u-gallery-heading"></h3>
@@ -289,7 +289,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-3">
                                             <h3 class="u-gallery-heading"></h3>
@@ -324,7 +324,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-2">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-4">
                                             <h3 class="u-gallery-heading"></h3>
@@ -333,7 +333,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-5">
                                             <h3 class="u-gallery-heading"></h3>
@@ -342,7 +342,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-6">
                                             <h3 class="u-gallery-heading"></h3>
@@ -400,7 +400,7 @@
                     <div class="u-layout-row">
                         <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-23 u-layout-cell-1">
                             <div class="u-container-layout u-valign-top u-container-layout-1">
-                                <img alt="" class="u-image u-image-default u-image-1" src="~/images/people2.png">
+                                <img alt="" class="u-image u-image-default u-image-1" src="~/Images/people2.png">
                             </div>
                         </div>
                         <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-37 u-layout-cell-2">
