--- a/AZSChool/AZSchool.WEB/Views/Home/Student_Done.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student_Done.cshtml
@@ -28,7 +28,7 @@
 <body class="u-body">
     <header class="u-clearfix u-header u-sticky u-white u-header" id="sec-e20f">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <img src="~/images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
+            <img src="~/Images/photo_2021-02-10_14-38-33.jpg" alt="" class="u-align-left u-image u-image-default u-image-1" data-image-width="300" data-image-height="70">
 
             <nav class="u-align-left u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
@@ -123,7 +123,7 @@
                     <div class="u-container-layout u-similar-container u-container-layout-1">
                         <a class="u-post-header-link" href="#">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/images/1.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-1" src="~/Images/1.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-1">
                             <a class="u-post-header-link" href="#"><!--blog_post_header_content-->Заголовок 1-го поста<!--/blog_post_header_content--></a>
@@ -136,7 +136,7 @@
                     <div class="u-container-layout u-similar-container u-container-layout-2">
                         <a class="u-post-header-link" href="blog/пост-1.html">
                             <!--blog_post_image-->
-                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/images/2.jpeg"><!--/blog_post_image-->
+                            <img alt="" class="u-blog-control u-expanded-width u-image u-image-default u-image-2" src="~/Images/2.jpeg"><!--/blog_post_image-->
                         </a><!--blog_post_header-->
                         <h4 class="u-blog-control u-text u-text-3">
                             <a class="u-post-header-link" href="blog/пост-1.html"><!--blog_post_header_content-->Заголовок 2-го поста<!--/blog_post_header_content--></a>
