--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher_Done.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher_Done.cshtml
@@ -104,7 +104,7 @@
     </section>
     <section class="u-align-left u-clearfix u-grey-10 u-section-2" id="sec-3238">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-            <h2 class="u-text u-text-1">Непроверенные</h2>
+            <h2 class="u-text u-text-1">Завершенные</h2>
             <!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":2}--><!--/blog_options_json-->
             <div class="u-blog u-expanded-width u-repeater u-repeater-1">
                 <!--blog_post-->
