--- a/AZSChool/AZSchool.WEB/Views/Home/Teacher.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Teacher.cshtml
@@ -98,7 +98,7 @@
                         <a class="active u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher">Мои курсы</a>
                     </li>
                     <li class="u-tab-item" style="margin: 0px 10px;">
-                        <a class="u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_InProgress">Не проверенные</a>
+                        <a class="u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_InProgress">Непроверенные курсы</a>
                     </li>
                     <li class="u-tab-item" style="margin: 0px 10px;">
                         <a class="u-border-3 u-border-active-grey-75 u-border-hover-grey-75 u-border-no-left u-border-no-right u-border-no-top u-button-style " href="../Home/Teacher_Done">Завершенные</a>
