--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="In our Campus you can, Our Courses, Our Teachers, John Mcallister, Jane Doe, Mary Mgrayan, Hanna Kim, 44, +10 K, +47, 15, Our Blog, Our university, Course Registration">
+    <meta name="keywords" content="In our Campus you can, Our Courses, Our Teachers, Михаил Семёнов, Jane Doe, Елена Миграян, Hanna Kim, 44, +10 K, +47, 15, Our Blog, Our university, Course Registration">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>AZSchool</title>
@@ -262,8 +262,8 @@
                                 </div>
                                 <div class="u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-2">
                                     <div class="u-container-layout u-valign-middle u-container-layout-3">
-                                        <h2 class="u-custom-font u-font-oswald u-text u-text-3">John Mcallister</h2>
-                                        <h6 class="u-text u-text-4">history TEACHER</h6>
+                                        <h2 class="u-custom-font u-font-oswald u-text u-text-3">Михаил Семёнов</h2>
+                                        <h6 class="u-text u-text-4">АРХИТЕКТОР ВЫЧИСЛИТЕЛЬНЫХ СИСТЕМ</h6>
                                         <p class="u-text u-text-5">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-1">
                                             <a class="u-social-url" target="_blank" href="">
@@ -289,8 +289,8 @@
                                 </div>
                                 <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-size-30-md u-layout-cell-4">
                                     <div class="u-container-layout u-valign-middle u-container-layout-5">
-                                        <h2 class="u-custom-font u-font-oswald u-text u-text-6">Jane Doe</h2>
-                                        <h6 class="u-text u-text-7">art TEACHER</h6>
+                                        <h2 class="u-custom-font u-font-oswald u-text u-text-6">Сергей Ефимов</h2>
+                                        <h6 class="u-text u-text-7">ПРЕПОДАВАТЕЛЬ ДИЗАЙНА</h6>
                                         <p class="u-text u-text-8">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-2">
                                             <a class="u-social-url" target="_blank" href="">
@@ -320,8 +320,8 @@
                                 </div>
                                 <div class="u-container-style u-layout-cell u-size-20 u-size-30-md u-layout-cell-6">
                                     <div class="u-container-layout u-valign-middle u-container-layout-7">
-                                        <h2 class="u-custom-font u-font-oswald u-text u-text-9">Mary Mgrayan</h2>
-                                        <h6 class="u-text u-text-10">statistics TEACHER</h6>
+                                        <h2 class="u-custom-font u-font-oswald u-text u-text-9">Елена Миграян</h2>
+                                        <h6 class="u-text u-text-10">ПРЕПОДАВАТЕЛЬ СТАТИСТИКИ</h6>
                                         <p class="u-text u-text-11">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-3">
                                             <a class="u-social-url" target="_blank" href="">
@@ -347,8 +347,8 @@
                                 </div>
                                 <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-size-30-md u-layout-cell-8">
                                     <div class="u-container-layout u-valign-middle u-container-layout-9">
-                                        <h2 class="u-custom-font u-font-oswald u-text u-text-12">Hanna Kim</h2>
-                                        <h6 class="u-text u-text-13">economics TEACHER</h6>
+                                        <h2 class="u-custom-font u-font-oswald u-text u-text-12">Анна Ким</h2>
+                                        <h6 class="u-text u-text-13">ПРЕПОДАВАТЕЛЬ ЭКОНОМИКИ</h6>
                                         <p class="u-text u-text-14">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
                                         <div class="u-social-icons u-spacing-10 u-social-icons-4">
                                             <a class="u-social-url" target="_blank" href="">
@@ -384,13 +384,13 @@
                         <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-15 u-size-30-md u-layout-cell-1">
                             <div class="u-container-layout u-valign-top u-container-layout-1">
                                 <h1 class="u-custom-font u-font-oswald u-text u-title u-text-1" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">44</h1>
-                                <p class="u-text u-text-2">TEACHERS</p>
+                                <p class="u-text u-text-2">ПРЕПОДАВАТЕЛЕЙ</p>
                             </div>
                         </div>
                         <div class="u-align-center u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-2">
                             <div class="u-container-layout u-valign-top u-container-layout-2">
                                 <h1 class="u-custom-font u-font-oswald u-text u-title u-text-3" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">+10 K</h1>
-                                <p class="u-text u-text-4">CUSTOMERS</p>
+                                <p class="u-text u-text-4">СТУДЕНТОВ</p>
                             </div>
                         </div>
                         <div class="u-align-center u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3">
@@ -402,7 +402,7 @@
                         <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-15 u-size-30-md u-layout-cell-4">
                             <div class="u-container-layout u-valign-top u-container-layout-4">
                                 <h1 class="u-custom-font u-font-oswald u-text u-title u-text-7" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">15</h1>
-                                <p class="u-text u-text-8">YEARS OF EXPERIENCE</p>
+                                <p class="u-text u-text-8">СУММАРНЫХ ЛЕТ ОПЫТА</p>
                             </div>
                         </div>
                     </div>
@@ -414,8 +414,8 @@
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-container-style u-group u-group-1">
                 <div class="u-container-layout u-valign-middle">
-                    <h2 class="u-custom-font u-font-oswald u-text u-text-1">Новости</h2>
-                    <p class="u-text u-text-2">Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
+                    <h2 class="u-custom-font u-font-oswald u-text u-text-1">О нас</h2>
+                    <p class="u-text u-text-2">Мы - это глобальная обучающая онлайн-платформа, которая предлагает всем доступ к онлайн-курсам от ведущих университетов и компаний.</p>
                 </div>
             </div>
             <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
@@ -429,12 +429,10 @@
                                 <div class="u-container-style u-layout-cell u-left-cell u-size-40 u-layout-cell-2">
                                     <div class="u-container-layout u-container-layout-3">
                                         <h2 class="u-custom-font u-font-oswald u-text u-text-3">
-                                            <a name="top">Our university</a>
+                                            <a name="top">О нас</a>
                                         </h2>
                                         <p class="u-text u-text-4">
-                                            Our campuses offer high quality learning, teaching and research spaces to better meet the needs of students, academics and researchers.<br>
-                                            <br>Is a major Australian university with a global outlook and a real-world
-                                            focus. We are one of the nation’s fastest growing research universities and our courses are in high demand. Our graduates include eight Rhodes Scholars, five of these awarded in the past six years.<br>
+                                            Соединяя студентов со всего мира с лучшими преподавателями, мы помогаем людям достигать своих целей и воплощать в жизнь свои мечты. Присоединяйтесь к нашему сообществу и начните учиться сегодня!
                                         </p>
                                     </div>
                                 </div>
@@ -445,8 +443,7 @@
                                 <div class="u-container-style u-layout-cell u-size-40 u-layout-cell-3">
                                     <div class="u-container-layout u-container-layout-4">
                                         <blockquote class="u-border-black u-custom-font u-text u-text-font u-text-5">
-                                            We are an ambitious and collaborative institution that seeks to equip our students and graduates with the skills they'll need in an increasingly disrupted and challenged world. We are transforming the student experience
-                                            we offer our 50,000 students and we place a premium on the international and national accreditation of our various professional degrees.
+                                            Мы сотрудничаем с ведущими университетами и компаниями, предлагая гибкое, доступное и актуальное онлайн-обучение. Мы предлагаем широкий спектр возможностей обучения - от практических проектов и курсов до сертификатов и программ на получение степени.
                                         </blockquote>
                                     </div>
                                 </div>
@@ -463,11 +460,10 @@
                                 <div class="u-container-style u-layout-cell u-right-cell u-size-40 u-layout-cell-6">
                                     <div class="u-container-layout">
                                         <h2 class="u-custom-font u-font-oswald u-text u-text-6">
-                                            <a class="nicdark_color_greydark nicdark_first_font" href="http://www.nicdarkthemes.com/themes/education/html/demo/university/single.php">Course Registration</a>
+                                            <a class="nicdark_color_greydark nicdark_first_font">Обучение</a>
                                         </h2>
                                         <p class="u-text u-text-7">
-                                            Our internationally award-winning Science and Engineering Centre is home to The Cube, acknowledged as one of the world’s largest digital interactive learning and display spaces. We established the world's first
-                                            Creative Industries Faculty, and we invest heavily in collaborative learning and interdisciplinary research environments.
+                                            Источник человеческого прогресса. Он способен изменить наш мир от болезней к здоровью, от бедности к процветанию, от конфликтов к миру. Он способен изменить нашу жизнь для нас самих, для наших семей, для наших сообществ. Независимо от того, кто мы и где находимся, обучение дает нам возможность меняться, расти и переосмысливать то, что возможно. Вот почему доступ к лучшему обучению - это право, а не привилегия.
                                         </p>
                                     </div>
                                 </div>
