--- a/AZSChool/AZSchool.WEB/Views/Home/Student.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Student.cshtml
@@ -134,7 +134,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-1">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/mashinnoeobuchenie.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-1">
                                             <h3 class="u-gallery-heading"></h3>
@@ -143,7 +143,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/naukaodannih.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-2">
                                             <h3 class="u-gallery-heading"></h3>
@@ -152,7 +152,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/glubokoe.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-3">
                                             <h3 class="u-gallery-heading"></h3>
@@ -163,19 +163,19 @@
                             </div>
                             <div class="u-container-style u-group u-white u-group-1">
                                 <div class="u-container-layout u-container-layout-2">
-                                    <h6 class="u-text u-text-default u-text-2">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-2">Машинное обучение</h6>
                                     <p class="u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-2">
                                 <div class="u-container-layout u-container-layout-3">
-                                    <h6 class="u-text u-text-default u-text-4">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-4">Наука о данных</h6>
                                     <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-3">
                                 <div class="u-container-layout u-container-layout-4">
-                                    <h6 class="u-text u-text-default u-text-6">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-6">Глубокое обучение</h6>
                                     <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
@@ -187,7 +187,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-2">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/datascence.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-4">
                                             <h3 class="u-gallery-heading"></h3>
@@ -196,7 +196,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/neurallink.png">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-5">
                                             <h3 class="u-gallery-heading"></h3>
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/strukturi.jpeg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-6">
                                             <h3 class="u-gallery-heading"></h3>
@@ -216,19 +216,19 @@
                             </div>
                             <div class="u-container-style u-group u-white u-group-4">
                                 <div class="u-container-layout u-container-layout-6">
-                                    <h6 class="u-text u-text-default u-text-8">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-8">Data Science</h6>
                                     <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-5">
                                 <div class="u-container-layout u-container-layout-7">
-                                    <h6 class="u-text u-text-default u-text-10">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-10">Нейронные сети</h6>
                                     <p class="u-text u-text-11">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-6">
                                 <div class="u-container-layout u-container-layout-8">
-                                    <h6 class="u-text u-text-default u-text-12">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-12">Структуры данных в Python</h6>
                                     <p class="u-text u-text-13">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-1">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/stenford.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-1">
                                             <h3 class="u-gallery-heading"></h3>
@@ -280,7 +280,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/ibm.png">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-2">
                                             <h3 class="u-gallery-heading"></h3>
@@ -289,7 +289,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/johnhopkins.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-3">
                                             <h3 class="u-gallery-heading"></h3>
@@ -300,19 +300,19 @@
                             </div>
                             <div class="u-container-style u-group u-white u-group-1">
                                 <div class="u-container-layout u-container-layout-2">
-                                    <h6 class="u-text u-text-default u-text-2">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-2">Стэнфордский университет</h6>
                                     <p class="u-text u-text-3">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-2">
                                 <div class="u-container-layout u-container-layout-3">
-                                    <h6 class="u-text u-text-default u-text-4">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-4">IBM</h6>
                                     <p class="u-text u-text-5">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-3">
                                 <div class="u-container-layout u-container-layout-4">
-                                    <h6 class="u-text u-text-default u-text-6">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-6">Университет Джона Хопкинса</h6>
                                     <p class="u-text u-text-7">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
@@ -324,7 +324,7 @@
                                 <div class="u-gallery-inner u-gallery-inner-2">
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="720" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3601244.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/stenford.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-4">
                                             <h3 class="u-gallery-heading"></h3>
@@ -333,7 +333,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1080" data-image-height="1080">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-3328071.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/johnhopkins.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-5">
                                             <h3 class="u-gallery-heading"></h3>
@@ -342,7 +342,7 @@
                                     </div>
                                     <div class="u-effect-fade u-gallery-item">
                                         <div class="u-back-slide" data-image-width="1000" data-image-height="1500">
-                                            <img class="u-back-image u-expanded" src="~/Images/pexels-photo-2659177.jpeg">
+                                            <img class="u-back-image u-expanded" src="~/Images/mitchigan.jpg">
                                         </div>
                                         <div class="u-over-slide u-shading u-over-slide-6">
                                             <h3 class="u-gallery-heading"></h3>
@@ -353,19 +353,19 @@
                             </div>
                             <div class="u-container-style u-group u-white u-group-4">
                                 <div class="u-container-layout u-container-layout-6">
-                                    <h6 class="u-text u-text-default u-text-8">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-8">Стэнфордский университет</h6>
                                     <p class="u-text u-text-9">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-5">
                                 <div class="u-container-layout u-container-layout-7">
-                                    <h6 class="u-text u-text-default u-text-10">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-10">Университет Джона Хопкинса</h6>
                                     <p class="u-text u-text-11">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
                             <div class="u-container-style u-group u-white u-group-6">
                                 <div class="u-container-layout u-container-layout-8">
-                                    <h6 class="u-text u-text-default u-text-12">Пример заголовка</h6>
+                                    <h6 class="u-text u-text-default u-text-12">Университет Митчигана</h6>
                                     <p class="u-text u-text-13">Пример текста. Кликните, чтобы выбрать текстовый блок. Кликните еще раз или сделайте двойной клик, чтобы начать редактирование текста.</p>
                                 </div>
                             </div>
