--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -396,7 +396,7 @@
                         <div class="u-align-center u-container-style u-layout-cell u-size-15 u-size-30-md u-layout-cell-3">
                             <div class="u-container-layout u-valign-top u-container-layout-3">
                                 <h1 class="u-custom-font u-font-oswald u-text u-title u-text-5" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">+47</h1>
-                                <p class="u-text u-text-6">COURSES</p>
+                                <p class="u-text u-text-6">КУРСОВ</p>
                             </div>
                         </div>
                         <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-15 u-size-30-md u-layout-cell-4">
