changed images in footer

--- a/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
+++ b/AZSChool/AZSchool.WEB/Views/Home/Index.cshtml
@@ -478,30 +478,30 @@
         <div class="u-clearfix u-sheet u-sheet-1">
             <div class="u-clearfix u-expanded-width u-gutter-20 u-layout-wrap u-layout-wrap-1">
                 <div class="u-layout">
-                    <div class="u-layout-row">
+                    <div class="u-layout-row" style="padding: 20px 0px 20px 0px;">
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-left-cell u-size-12 u-size-60-md u-layout-cell-1">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-1">
-                                <img src="~/Images/fd088fa9e04993bca1d7288f0c7b9ddd.png" alt="" class="u-image u-image-default u-image-1" data-image-width="400" data-image-height="122">
+                                <img src="~/Images/Фон1.png" alt="" class="u-image u-image-default" style=" width: 170px; height: 170px;">
                             </div>
                         </div>
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-size-12 u-size-60-md u-layout-cell-2">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-2">
-                                <img src="~/Images/c8c5e25932eaa58b7812abf7bb2960f5.png" alt="" class="u-image u-image-default u-image-2">
+                                <img src="~/Images/AMEALOGO.png" alt="" class="u-image u-image-default" style=" width: 170px; height: 170px;">
                             </div>
                         </div>
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-size-12 u-size-60-md u-layout-cell-3">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-3">
-                                <img src="~/Images/11169ee3439dd229c3d68b877516e1a0.png" alt="" class="u-image u-image-default u-image-3">
+                                <img src="~/Images/45099219_556017231515605_4332054299946254336_n.png" alt="" class="u-image u-image-default" style=" width: 170px; height: 170px;">
                             </div>
                         </div>
                         <div class="u-align-center-md u-align-center-sm u-align-center-xs u-container-style u-layout-cell u-size-12 u-size-60-md u-layout-cell-4">
                             <div class="u-container-layout u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-container-layout-4">
-                                <img src="~/Images/9b534f8d3c73950344420c862b51589b.png" alt="" class="u-image u-image-default u-image-4">
+                                <img src="~/Images/Безымянный (3).png" alt="" class="u-image u-image-default" style=" width: 170px; height: 170px;">
                             </div>
                         </div>
                         <div class="u-align-center-sm u-align-center-xs u-container-style u-hidden-md u-layout-cell u-right-cell u-size-12 u-size-60-md u-layout-cell-5">
                             <div class="u-container-layout u-valign-middle-sm u-valign-middle-xs u-container-layout-5">
-                                <img src="~/Images/3425b4f540706edc83ab86a3032b1047.png" alt="" class="u-image u-image-default u-image-5">
+                                <img src="~/Images/Фон.png" alt="" class="u-image u-image-default" style=" width: 170px; height: 170px;">
                             </div>
                         </div>
                     </div>
